--- a/apps/site/tsconfig.json
+++ b/apps/site/tsconfig.json
@@ -66,5 +66,10 @@
     },
     "exclude": [
         "node_modules",
+        "dist",
+        "build",
+        "out",
+        "coverage",
+        "public",
     ]
 }
