--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,5 +19,10 @@
     },
     "exclude": [
         "node_modules",
+        "dist",
+        "build",
+        "out",
+        "coverage",
+        "lib",
     ],
 }
