--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -17,6 +17,7 @@
         "@astrojs/react": "^4.2.3",
         "@astrojs/sitemap": "^3.3.0",
         "@fontsource/roboto": "^5.2.5",
+        "@radix-ui/react-slot": "^1.2.0",
         "@react-three/drei": "^10.0.6",
         "@react-three/fiber": "^9.1.2",
         "@react-three/postprocessing": "^3.0.4",
@@ -29,7 +30,9 @@
         "astro": "^5.6.1",
         "astro-icon": "^1.1.5",
         "astro-seo": "^0.8.4",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "lucide-react": "^0.503.0",
         "marked": "^15.0.8",
         "motion": "^12.6.5",
         "react": "^19.1.0",
@@ -38,6 +41,7 @@
         "tailwindcss": "^4.1.3",
         "three": "^0.175.0",
         "three-stdlib": "^2.35.15",
+        "tw-animate-css": "^1.2.8",
         "vite": "^6.2.6"
     },
     "devDependencies": {
