way being from the point of no return

--- a/apps/site/src/content/frameworks/firebase.yaml
+++ b/apps/site/src/content/frameworks/firebase.yaml
@@ -1,5 +1,5 @@
 title: Firebase
 draft: false
 badge:
-    border: '#e0e0e0'
-    background: '#ffca28'
+    border: '#FF9100'
+    background: '#FFC400'
