refactor: update framework YAML files to standardize badge backgrounds and add links

--- a/apps/site/src/content/frameworks/astro.yaml
+++ b/apps/site/src/content/frameworks/astro.yaml
@@ -2,4 +2,5 @@ title: Astro
 draft: false
 badge:
     border: '#e0e0e0'
-    background: '#ff5f5f'
+    background: '#ffffff'
+link: https://astro.build
