--- a/apps/site/src/content/frameworks/blender.yaml
+++ b/apps/site/src/content/frameworks/blender.yaml
@@ -2,4 +2,5 @@ title: Blender
 draft: false
 badge:
     border: '#e0e0e0'
-    background: '#f5792a'
+    background: '#EA7600'
+link: https://www.blender.org
