--- a/apps/site/src/content/frameworks/flutter.yaml
+++ b/apps/site/src/content/frameworks/flutter.yaml
@@ -1,5 +1,6 @@
 title: Flutter
 draft: false
 badge:
-    border: '#e0e0e0'
-    background: '#02569b'
+    border: '#042B59'
+    background: '#0553B1'
+link: https://flutter.dev
