--- a/apps/site/src/content/frameworks/godot.yaml
+++ b/apps/site/src/content/frameworks/godot.yaml
@@ -1,5 +1,6 @@
 title: Godot
 draft: false
 badge:
-    border: '#e0e0e0'
-    background: '#ff4081'
+    border: '#414042'
+    background: '#478cbf'
+link: https://godotengine.org
