--- a/apps/site/src/content/frameworks/javascript.yaml
+++ b/apps/site/src/content/frameworks/javascript.yaml
@@ -2,4 +2,5 @@ title: JavaScript
 draft: false
 badge:
     border: '#ff0000'
-    background: '#ff0000'
+    background: '#F7DF1E'
+link: https://www.javascript.com
