--- a/apps/site/src/content/frameworks/typescript.yaml
+++ b/apps/site/src/content/frameworks/typescript.yaml
@@ -2,4 +2,5 @@ title: TypeScript
 draft: false
 badge:
     border: '#ff0000'
-    background: '#ff0000'
+    background: '#3178c6'
+link: https://www.typescriptlang.org
