--- a/apps/site/src/content/frameworks/figma.yaml
+++ b/apps/site/src/content/frameworks/figma.yaml
@@ -2,4 +2,5 @@ title: Figma
 draft: false
 badge:
     border: '#e0e0e0'
-    background: '#f24e1e'
+    background: '#ff3737'
+link: https://www.figma.com
