--- a/apps/site/src/content/frameworks/firebase.yaml
+++ b/apps/site/src/content/frameworks/firebase.yaml
@@ -1,5 +1,6 @@
 title: Firebase
 draft: false
 badge:
-    border: '#FF9100'
-    background: '#FFC400'
+    border: '#DD2C00'
+    background: '#ff9100'
+link: https://firebase.google.com
