--- a/apps/site/src/content/frameworks/react.yaml
+++ b/apps/site/src/content/frameworks/react.yaml
@@ -2,4 +2,5 @@ title: React
 draft: false
 badge:
     border: '#e0e0e0'
-    background: '#61dafb'
+    background: '#5ed4f3'
+link: https://reactjs.org
