--- a/apps/site/src/content/frameworks/unity.yaml
+++ b/apps/site/src/content/frameworks/unity.yaml
@@ -2,4 +2,5 @@ title: Unity
 draft: false
 badge:
     border: '#e0e0e0'
-    background: '#ff4081'
+    background: '#222c37'
+link: https://unity.com
