refactor: remove border property from badge schema and update framework YAML files;

--- a/apps/site/src/content/products/games.yaml
+++ b/apps/site/src/content/products/games.yaml
@@ -2,6 +2,4 @@ title: Jogos e Gamificação
 draft: false
 summary: Magia e entretenimento em experiências jogáveis.
 description: |
-    Criar jogos é dar forma a ideias por meio de sistemas, mundos e interações.
-
-    Criamos jogos completos e sistemas gamificados que combinam narrativa, desafio e interatividade. Desenvolvemos desde experiências promocionais até títulos autorais, com foco em design funcional e imersão emocional.
+    Para dar forma a ideias por meio de mundos, história e interações, criamos jogos e sistemas gamificados que combinam narrativa, desafio e interatividade.
