--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
 		"css",
 		"scss"
 	],
-	"cSpell.language": "en,pt-BR,pt"
+	"cSpell.language": "en,pt-BR,pt",
+	"[css]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
