feat: update project tags and add new tag files for better categorization

--- a/apps/site/src/content/projects/centra_engenharia.yaml
+++ b/apps/site/src/content/projects/centra_engenharia.yaml
@@ -9,8 +9,13 @@ category:
         - web
         - mobile
     tags:
-        - management
-    #   - construcao-civil
+        - gestão
+        - obras
+        - engenharia
+        - fornecedores
+        - comunicação
+        - cronograma
+        - relatórios
     frameworks:
         - flutter
         - firebase
