--- a/apps/site/src/content/projects/filtro_enade_2021.yaml
+++ b/apps/site/src/content/projects/filtro_enade_2021.yaml
@@ -7,8 +7,10 @@ category:
         - interactivity
     platforms:
         - ar
-    # tags:
-    #   - filter
+    tags:
+        - educação
+        - filtros
+        - redes_sociais
     frameworks:
         - meta
         - javascript
