--- a/apps/site/src/content/projects/centra_engenharia.yaml
+++ b/apps/site/src/content/projects/centra_engenharia.yaml
@@ -4,7 +4,7 @@ subtitle: 'Plataforma de Gestão de Obras'
 summary: 'Aplicação web e mobile para facilitar a comunicação e troca de documentos entre equipe, clientes e gerentes.'
 category:
     products:
-        - systems
+        - sistemas_web_e_apps
     platforms:
         - web
         - mobile
