--- a/apps/site/src/content/projects/fixe_eventos.yaml
+++ b/apps/site/src/content/projects/fixe_eventos.yaml
@@ -4,7 +4,7 @@ subtitle: 'Site Corporativo para Empresa de Eventos'
 summary: 'Site corporativo da Fixe Eventos, desenvolvido em Wordpress com design fornecido pela empresa e ajustes para acessibilidade e responsividade.'
 category:
     products:
-        - systems
+        - sistemas_web_e_apps
     platforms:
         - web
     tags:
@@ -14,7 +14,7 @@ category:
         - modular
     frameworks:
         - figma
-        # - wordpress
+        - wordpress
 date: '2023-06'
 hero:
     src: '/src/assets/images/projects/fixe_eventos/fixe_eventos_hero_desktop.png'
