--- a/apps/site/src/content/projects/jornada_vocacional_3.yaml
+++ b/apps/site/src/content/projects/jornada_vocacional_3.yaml
@@ -4,7 +4,8 @@ subtitle: 'Experiência Interativa Web'
 summary: 'A terceira edição da Jornada Vocacional UNICEPLAC trouxe uma nova experiência, mais leve, rápida e com mais recursos interativos para os usuários!'
 category:
     products:
-        - interactivity
+        - interatividade
+        - jogos_e_gamificação
     platforms:
         - web
     tags:
@@ -12,12 +13,12 @@ category:
         - evento_híbrido
         - vocacional
     frameworks:
-        - javascript # Referência ao frameworks/javascript.yaml
-        # - jquery # Sugestão: Criar frameworks/jquery.yaml
-        # - ajax # Sugestão: Criar frameworks/ajax.yaml
-        # - cakephp # Sugestão: Criar frameworks/cakephp.yaml
-        # - mysql # Sugestão: Criar frameworks/mysql.yaml
-        # - bootstrap # Sugestão: Criar frameworks/bootstrap.yaml
+        - javascript
+        - jquery
+        - ajax
+        - cakephp
+        - mysql
+        - bootstrap
 date: '2021-10'
 hero:
     src: '/src/assets/images/projects/jornada_3/jornada_3_hero.png'
