--- a/apps/site/src/content/projects/tavern_tale.yaml
+++ b/apps/site/src/content/projects/tavern_tale.yaml
@@ -4,19 +4,19 @@ subtitle: 'Site Corporativo'
 summary: 'Site corporativo para o estúdio de jogos Tavern Tale, desenvolvido em Wordpress com Elementor, focado em apresentar os projetos e a identidade do estúdio.'
 category:
     products:
-        - systems
+        - sistemas_web_e_apps
     platforms:
         - web
-tags:
-    - cms
-    - portfólio
-    - corporativo
-    - multilinguagem
-    - modular
-    - personalização
-# frameworks:
-    # - wordpress # Sugestão: Criar frameworks/wordpress.yaml
-    # - elementor # Sugestão: Criar frameworks/elementor.yaml
+    tags:
+        - cms
+        - portfólio
+        - corporativo
+        - multilinguagem
+        - modular
+        - personalizável
+    frameworks:
+        - wordpress
+        - elementor
 date: '2023-09'
 # hero:
 #     src: '/src/assets/images/projects/tavern_tale/tavern_tale_hero.png'
@@ -27,7 +27,7 @@ date: '2023-09'
 partners:
     - 'Tavern Tale Studio'
 content: |
-    O site corporativo do **Tavern Tale Studio** foi desenvolvido para apresentar o portfólio e a identidade visual do estúdio de jogos. Construído inteiramente em **Wordpress** e utilizando o **Elementor** para personalização visual, o site oferece uma plataforma robusta e fácil de gerenciar.
+    O site corporativo do **Tavern Tale Studio** foi desenvolvido para apresentar o portfólio e a identidade visual do estúdio de jogos. Construído inteiramente em **Wordpress** e utilizando o **Elementor** para personalizável visual, o site oferece uma plataforma robusta e fácil de gerenciar.
 
     Principais características:
 
