feat: add Radix UI dropdown and select components; update button styles; enhance project filtering functionality

--- a/apps/site/src/content/projects/jornada_vocacional_1.yaml
+++ b/apps/site/src/content/projects/jornada_vocacional_1.yaml
@@ -10,7 +10,7 @@ category:
         - web
     tags:
         - educação
-        - evento híbrido
+        - evento_híbrido
     frameworks:
         - javascript
         - jquery
