--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -17,6 +17,8 @@
         "@astrojs/react": "^4.2.3",
         "@astrojs/sitemap": "^3.3.0",
         "@fontsource/roboto": "^5.2.5",
+        "@radix-ui/react-dropdown-menu": "^2.1.12",
+        "@radix-ui/react-select": "^2.2.2",
         "@radix-ui/react-slot": "^1.2.0",
         "@react-three/drei": "^10.0.6",
         "@react-three/fiber": "^9.1.2",
