feat: add 'música' to products category in Jornada Vocacional and Mathematical project files

--- a/apps/site/src/content/projects/jornada_vocacional_1.yaml
+++ b/apps/site/src/content/projects/jornada_vocacional_1.yaml
@@ -6,6 +6,7 @@ category:
     products:
         - interatividade
         - jogos_e_gamificação
+        - música
     platforms:
         - web
     tags:
