--- a/apps/site/src/content/projects/jornada_vocacional_2.yaml
+++ b/apps/site/src/content/projects/jornada_vocacional_2.yaml
@@ -6,6 +6,7 @@ category:
     products:
         - interatividade
         - jogos_e_gamificação
+        - música
     platforms:
         - web
     tags:
