feat: add Prettier configuration for Astro files in VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,9 @@
 	"cSpell.language": "en,pt-BR,pt",
 	"[css]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"prettier.documentSelectors": ["**/*.astro"],
+	"[astro]": {
+	  "editor.defaultFormatter": "esbenp.prettier-vscode"
 	}
 }
