--- a/apps/site/src/content/projects/jornada_vocacional_2.yaml
+++ b/apps/site/src/content/projects/jornada_vocacional_2.yaml
@@ -28,7 +28,7 @@ hero:
 #     -
 # partners:
 #     -
-content: |
+description: |
     A segunda edição da **Jornada Vocacional Uniceplac** trouxe diversas melhorias para aprimorar a experiência dos estudantes do Ensino Médio. Entre as novidades, destacam-se:
 
     - Melhorias significativas na interface e navegação;
