--- a/apps/site/src/content/projects/jornada_vocacional_3.yaml
+++ b/apps/site/src/content/projects/jornada_vocacional_3.yaml
@@ -29,7 +29,7 @@ hero:
 #     -
 # partners:
 #     -
-content: |
+description: |
     A terceira edição da **Jornada Vocacional UNICEPLAC** trouxe uma nova experiência, mais leve, rápida e com mais recursos interativos para os usuários!
 
     - Criação de Avatar;
