--- a/apps/site/src/content/projects/mathematical.yaml
+++ b/apps/site/src/content/projects/mathematical.yaml
@@ -24,7 +24,7 @@ hero:
 #     -
 # partners:
 #     -
-content: |
+description: |
     **Mathematical!** é um jogo educativo gratuito que combina ação e aprendizado. No estilo **shoot'em up**, o jogador deve resolver desafios matemáticos para avançar pelos níveis enquanto enfrenta inimigos e desbloqueia melhorias.
 
     O jogo foi projetado para tornar o aprendizado de matemática divertido e envolvente, com mecânicas que incentivam o raciocínio rápido e a estratégia.
