--- a/apps/site/src/content/projects/only_kids.yaml
+++ b/apps/site/src/content/projects/only_kids.yaml
@@ -25,7 +25,7 @@ hero:
 #     -
 # partners:
 #     -
-content: |
+description: |
     A **Loja Virtual Only Kids** foi desenvolvida para oferecer uma experiência de compra fluida e integrada, conectando o e-commerce às plataformas do Facebook, Instagram e ao sistema Bling ERP. O projeto foi criado com foco em automação, usabilidade e design alinhado à identidade da marca.
 
     Principais características:
