--- a/apps/site/src/content/projects/quase_calouro.yaml
+++ b/apps/site/src/content/projects/quase_calouro.yaml
@@ -23,7 +23,7 @@ hero:
 #     -
 # partners:
 #     -
-content: |
+description: |
     A landing page **@quasecalouro** foi desenvolvida para capturar leads e oferecer uma plataforma rica em conteúdos exclusivos voltados para estudantes. O projeto foi criado com foco em usabilidade, design responsivo e conformidade com as melhores práticas de proteção de dados (LGPD).
 
     Principais características:
